@@ -3,6 +3,7 @@ ChangeLog
  [ + added, - removed, * changed ]
  * 29Apr2020 Fixes local to world rank translations for comms going thru an intercommunicator created with MPI_Intercomm_create
  + 29Apr2020 Adds environment variable EXTRAE_ENFORCE_FS_SYNC to ensure file system synchronization after creating trace files and folders
+ * 20Jan2019 Fixes circular buffering to dump remaining data at the end of the run outside online mode
  + 18Nov2019 Adds instrumentation wrappers for MPI_Comm_split_type
  + 07Nov2019 Adds environment variable EXTRAE_UNSET_PRELOAD to clear the LD_PRELOAD once the tracing is loaded
  * 25Oct2019 Fixes double emission of python events call and c_call
